[gd_scene load_steps=12 format=2]

[ext_resource path="res://addons/paint/main_panel.gd" type="Script" id=1]
[ext_resource path="res://addons/paint/rectangle.png" type="Texture" id=2]
[ext_resource path="res://addons/paint/circle.png" type="Texture" id=3]
[ext_resource path="res://addons/paint/square.png" type="Texture" id=4]
[ext_resource path="res://addons/paint/pattern.png" type="Texture" id=5]
[ext_resource path="res://addons/paint/pattern2.png" type="Texture" id=6]
[ext_resource path="res://addons/paint/VarLabel.gd" type="Script" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.258824, 0.258824, 0.258824, 1 )
border_width_top = 1
border_color = Color( 0.8, 0.8, 0.8, 0.192157 )
corner_radius_top_left = 99
corner_radius_top_right = 99
corner_radius_bottom_right = 99
corner_radius_bottom_left = 99
shadow_color = Color( 0, 0, 0, 0.172549 )
shadow_size = 3
anti_aliasing = false
anti_aliasing_size = 3

[sub_resource type="StyleBoxFlat" id=2]
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color( 0, 0, 0, 0.0117647 )
shadow_size = 32

[sub_resource type="ButtonGroup" id=3]

[sub_resource type="StyleBoxFlat" id=4]
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="Panel" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="background" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 3

[node name="resize" type="Button" parent="background"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -24.0
margin_top = -24.0
rect_min_size = Vector2( 24, 24 )
mouse_default_cursor_shape = 12
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )

[node name="Canvas" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -463.5
margin_top = -262.5
margin_right = 463.5
margin_bottom = 262.5
mouse_filter = 2
custom_styles/panel = SubResource( 2 )

[node name="Brush" type="ColorRect" parent="."]
editor/display_folded = true
margin_left = 11.3441
margin_top = 31.8299
margin_right = 19.3441
margin_bottom = 39.8299
mouse_filter = 2
color = Color( 1, 1, 1, 0 )

[node name="TextureRect" type="TextureRect" parent="Brush"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="Layers" type="Tree" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -157.0
margin_top = 24.0

[node name="Toolbox" type="Panel" parent="."]
editor/display_folded = true
anchor_right = 1.0
rect_min_size = Vector2( 24, 24 )

[node name="HBoxContainer" type="HBoxContainer" parent="Toolbox"]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 17

[node name="Selection" type="Control" parent="Toolbox/HBoxContainer"]
margin_right = 137.0
margin_bottom = 24.0
rect_min_size = Vector2( 137, 24 )
rect_clip_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="Toolbox/HBoxContainer/Selection"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0

[node name="Button1" type="Button" parent="Toolbox/HBoxContainer/Selection/HBoxContainer"]
margin_right = 28.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
custom_constants/hseparation = 0
toggle_mode = true
group = SubResource( 3 )
icon = ExtResource( 3 )

[node name="Button2" type="Button" parent="Toolbox/HBoxContainer/Selection/HBoxContainer"]
margin_left = 28.0
margin_right = 52.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
custom_constants/hseparation = 0
toggle_mode = true
pressed = true
group = SubResource( 3 )
icon = ExtResource( 2 )

[node name="Button3" type="Button" parent="Toolbox/HBoxContainer/Selection/HBoxContainer"]
visible = false
margin_left = 52.0
margin_right = 80.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
custom_constants/hseparation = 0
toggle_mode = true
group = SubResource( 3 )
icon = ExtResource( 4 )

[node name="Button4" type="Button" parent="Toolbox/HBoxContainer/Selection/HBoxContainer"]
margin_left = 52.0
margin_right = 80.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
custom_constants/hseparation = 0
toggle_mode = true
group = SubResource( 3 )
icon = ExtResource( 5 )

[node name="Button5" type="Button" parent="Toolbox/HBoxContainer/Selection/HBoxContainer"]
margin_left = 80.0
margin_right = 108.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
custom_constants/hseparation = 0
toggle_mode = true
group = SubResource( 3 )
icon = ExtResource( 6 )

[node name="Tool" type="Label" parent="Toolbox/HBoxContainer"]
visible = false
margin_left = 154.0
margin_top = 5.0
margin_right = 209.0
margin_bottom = 19.0
text = "Pen Tool"

[node name="Size" type="Label" parent="Toolbox/HBoxContainer"]
margin_left = 154.0
margin_right = 192.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
mouse_filter = 0
mouse_default_cursor_shape = 10
text = "Size:8"
align = 1
valign = 1
script = ExtResource( 7 )
value = 8

[node name="Control" type="Control" parent="Toolbox/HBoxContainer"]
margin_left = 209.0
margin_right = 1024.0
margin_bottom = 24.0
rect_min_size = Vector2( 96, 24 )
rect_clip_content = true
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Toolbox/HBoxContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorPickerButton" type="ColorPickerButton" parent="Toolbox/HBoxContainer/Control/HBoxContainer"]
margin_right = 24.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
custom_styles/normal = SubResource( 4 )
flat = true

[node name="HSlider" type="HSlider" parent="Toolbox/HBoxContainer/Control/HBoxContainer"]
margin_left = 28.0
margin_right = 787.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 1.0
step = 0.01
value = 1.0
ticks_on_borders = true

[node name="ColorPickerButton2" type="ColorPickerButton" parent="Toolbox/HBoxContainer/Control/HBoxContainer"]
margin_left = 791.0
margin_right = 815.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
flat = true
color = Color( 1, 1, 1, 1 )
[connection signal="gui_input" from="background" to="." method="_on_background_gui_input"]
[connection signal="toggled" from="Toolbox/HBoxContainer/Selection/HBoxContainer/Button1" to="." method="_on_Button1_toggled"]
[connection signal="toggled" from="Toolbox/HBoxContainer/Selection/HBoxContainer/Button2" to="." method="_on_Button2_toggled"]
[connection signal="toggled" from="Toolbox/HBoxContainer/Selection/HBoxContainer/Button3" to="." method="_on_Button3_toggled"]
[connection signal="toggled" from="Toolbox/HBoxContainer/Selection/HBoxContainer/Button4" to="." method="_on_Button4_toggled"]
[connection signal="toggled" from="Toolbox/HBoxContainer/Selection/HBoxContainer/Button5" to="." method="_on_Button5_toggled"]
[connection signal="value_changed" from="Toolbox/HBoxContainer/Size" to="." method="_on_Size_value_changed"]
[connection signal="color_changed" from="Toolbox/HBoxContainer/Control/HBoxContainer/ColorPickerButton" to="." method="_on_ColorPickerButton_color_changed"]
[connection signal="value_changed" from="Toolbox/HBoxContainer/Control/HBoxContainer/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="color_changed" from="Toolbox/HBoxContainer/Control/HBoxContainer/ColorPickerButton2" to="." method="_on_ColorPickerButton2_color_changed"]
